--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -155,6 +155,62 @@ Classes used by multiple components are in the `seedu.address.commons` package.
 
 This section describes some noteworthy details on how certain features are implemented.
 
+// tag::autocomplete[]
+=== Autocomplete feature
+
+==== Current Implementation
+
+The AutoCompleteFeature is facilitated by 2 classes: the `AutoCompleteTextField`, and the class `Styles`. +
+
+
+
+
+// end::autocomplete[]
+
+// tag::upload[]
+=== Upload feature
+
+==== Current Implementation
+
+The uploading of a student's picture is facilitated by UploadPictureCommandParser, UploadPictureCommand, ModelManager, FileChooser and DisplayPicture,
+while the displaying of the student's picture is facilitated by MainWindow and StudentCard. +
+`UploadPictureCommandParser` implements `Parser`. `UploadPictureCommand` extends `Command`,
+and represents the logic that will be executed once the user activates the upload command and chooses a file. +
+The `UploadPictureCommand` command communicates with `ModelManager` to replace the old `Student` object with
+a new `Student` object that has its display picture field changed. +
+
+This change is then reflected in the UI when `MainWindow` loads the `StudentCard` for the new student,
+which will load the image and display it in the UI.
+
+The main operation implemented is `UploadPictureCommand#execute`.
+
+Step 1. The user wants to upload a display picture for their student. User identifies the student's index
+number and enters the command `upload INDEX`.
+
+Step 2. `MainWindow` detects the `upload` command word and uses `FileChooser` to open a window for users to select a picture from their computer.
+`MainWindow` then saves the path of the selected file as a string, adds a prefix "f/" to the input arguments.
+The path of the file is also appended to the end of the input string before the input arguments are passed to `NotebookParser`
+
+Step 3. `NotebookParser` parses the input and detects the `upload` command word, and calls `UploadPictureCommandParser`.
+This in turn checks user's input for errors before calling `UploadPictureCommand`, which checks whether the file
+is a PNG or JPG file.
+
+Step 4. `LogicManager` executes the `UploadPictureCommand`, which checks the validity of the index provided,
+as well as whether the picture selected is different from the picture already displayed.
+A visual representation of the order of checks for the input arguments are displayed in the diagram below.
+
+image::upload/upload_dg_1.JPG[checksdiagram,400,480,pdfwidth=50%,scaledwidth=50%]
+
+Step 5.
+
+Step 6.
+
+The following diagram illustrates the process above.
+
+image::SebastianDG/UploadSequenceDiagram.png[]
+
+// end::upload[]
+
 // tag::undoredo[]
 === Undo and Redo feature
 ==== Implementation
