--- a/docs/team/SebastianLie.adoc
+++ b/docs/team/SebastianLie.adoc
@@ -41,10 +41,23 @@ The main features of the project are:
 - *Minor Enhancement*: added the ability to scroll through previously entered commands with the up and down arrow keys
 - Code Contributed [https://github.com/AY1920S1-CS2103-T14-1/main/commits?author=sebastianlie[Functional Code]] [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false&tabOpen=true&tabType=authorship&tabAuthor=SebastianLie&tabRepo=AY1920S1-CS2103-T14-1%2Fmain%5Bmaster%5D[RepoSense]
 ]
+* *Other contributions*:
+
+** Project management:
+*** Managed releases `v1.3` - `v1.5rc` (3 releases) on GitHub
+*** Fixed issues brought up by peers. (Pull requests https://github.com/AY1920S1-CS2103-T14-1/main/pull/61[#61], Pull requests https://github.com/AY1920S1-CS2103-T14-1/main/pull/85[#85])
+** Enhancements to existing features:
+*** Added 2 extra panels to the GUI, and added display picture to the student card (Pull requests https://github.com/AY1920S1-CS2103-T14-1/main/pull/61[#61], Pull requests https://github.com/AY1920S1-CS2103-T14-1/main/pull/85[#85])
+*** improved test coverage from 25 to 33 %, PR #189, #190, #191: 46-48% (Pull requests https://github.com/AY1920S1-CS2103-T14-1/main/pull/190[#190], Pull requests https://github.com/AY1920S1-CS2103-T14-1/main/pull/189[#189])
+** Documentation:
+*** Did cosmetic tweaks to existing contents of the User Guide: https://github.com[#14]
+** Community:
+*** PRs reviewed (with non-trivial review comments): https://github.com[#12], https://github.com[#32], https://github.com[#19], https://github.com[#42]
+*** Reported bugs and suggestions for other teams in the class (examples:  https://github.com[1], https://github.com[2], https://github.com[3])
+
 - Other contributions:
 
-- Added Test coverage: improved test coverage from 25 to 33 %,
-PR #189, #190
+- Added Test coverage: improved test coverage from 25 to 33 %, PR #189, #190, #191: 46-48%
 
 == Contributions to User Guide
 
@@ -64,9 +77,9 @@ include::../UserGuide.adoc[tag=upload]
 |_Given below are sections I contributed to the Developer Guide. They showcase my ability to write technical documentation and the technical depth of my contributions to the project._
 |===
 
-include::../DeveloperGuide.adoc[tag=undoredo]
+include::../DeveloperGuide.adoc[tag=autocomplete]
 
-include::../DeveloperGuide.adoc[tag=dataencryption]
+include::../DeveloperGuide.adoc[tag=upload]
 
 
 
