--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -584,7 +584,7 @@ image::reportlocation.png[width="790"]
 You can also add your signature name to the report by following the command format below.
 
 [IMPORTANT]
-Your signature should not contain numbers or punctuations and must be less than 40 characters.
+Your signature should only contain alphabets and whitespaces and must be less than 40 characters.
 
 Format: `genReport bodyId (yourSignatureName)`
 
@@ -604,7 +604,7 @@ You can generate all individual reports in a PDF filename `[red]#Report (ALL BOD
 You can also add your signature name to the report by following the command format below.
 
 [IMPORTANT]
-Your signature should not contain numbers or punctuations and must be less than 40 characters.
+Your signature should only contain alphabets and whitespaces and must be less than 40 characters.
 
 Format: `genReports (yourSignatureName)`
 
@@ -624,7 +624,7 @@ You can generate a tabular report overview containing key information for all bo
 You can also add your signature name to the report by following the command format below.
 
 [IMPORTANT]
-Your signature should not contain numbers or punctuations and must be less than 40 characters.
+Your signature should only contain alphabets and whitespaces and must be less than 40 characters.
 
 Format: `genReportSummary (yourSignatureName)`
 
