Complete developer guide (#183)
* partial udpate of EditCommandParserTest

* Add more test cases to EditCommandParser

* complete EditCommandParserTest

* fix test case issues

* fix checkstyle issues

* rename variables and begin Interviewee test cases

* fix checkstyle issues

* Add test cases for Interviewee and Interviewer

* Add test cases for JsonAdaptedDepartment and JsonAdaptedSlot

* update message constraint descriptions for Department, Slot, YearOfStudy and Faculty

* update descriptions for Commands

* update description for commands

* initial changes to UserGuide.adoc

* Update UserGuide.adoc

* fix travis CI issues

* fix travis CI issues

* fix travis CI issues

* fix test case issues

* initial content added to PPP

* fix bug where incorrect dates like 29/02/2019 were being parsed correctly

* rewrite incorrect statements on UserGuide.adoc

* rewrote parse error messages to be more descriptive

* add constraint for tags in add/edit commands in userguide

* update user guide to be more descriptive for add/edit commands

* improve system messages

* update error messages to be more descriptie

* fix travis CI issues

* bugfix where duplicate slots could be added at once

* Add new test cases for bugfix

* fixed a bug where duplicate arguments could be passed in add/edit

* abstract DeleteCommand to DeleteIntervieweeCommand, DeleteInterviewerCommand

* improve test cases

* Added class diagram for Logic component

* add general logic sequence diagram

* add activity diagrams for add, edit and delte

* add sequence diagram for add command

* add sequence diagram for edit command

* add sequence diagram for delete command

* minor renaming

* minor changes

* minor changes

* update developer guide for add command

* complete developer guide

* complete developer guide

* fix travis CI issues

--- a/docs/team/kendrickang.adoc
+++ b/docs/team/kendrickang.adoc
@@ -31,16 +31,22 @@ the existing code base. The implementation too was challenging as it required ch
 designed such that enhancements could be easily added.
 ** Credits: Joshua Bloch, author of Effective Java, for his ideas on Builder patterns as a way to generate objects with optional parameters.
 
+* *Minor enhancement*: added the ability to clear all entities from Scheduler.
+
 * *Code contributed*: [https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=kendrickang&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false[Functional code]] [https://github.com[Test code]] _{give links to collated code files}_
 
 * *Other contributions*:
 
+** Project management:
+*** Contributed non-trivially to pull request code discussion
+*** Coordinated assignment of bugs after mock practical exam
 ** Enhancements to existing features:
 *** Wrote additional tests for existing features to increase coverage to above 75%: https://github.com/AY1920S1-CS2103-F09-1/main/pull/148[#148], https://github.com/AY1920S1-CS2103-F09-1/main/pull/154[#154]
 ** Documentation:
 *** Did cosmetic and structural tweaks to existing contents of the User Guide to improve readability: https://github.com/AY1920S1-CS2103-F09-1/main/pull/156[#156]
 ** Community:
 *** Contributed to forum discussions: https://github.com/nus-cs2103-AY1920S1/forum/issues/88#issuecomment-533785777[#1]
+
 
 ====
 
